--- a/docker-php.conf
+++ b/docker-php.conf
@@ -3,7 +3,7 @@
 </FilesMatch>
 
 DirectoryIndex disabled
-DirectoryIndex index.php index.html
+DirectoryIndex index.php index.html hostingstart.html
 
 <Directory /var/www/>
         Options -Indexes
